--- a/App1/MainWindow.xaml
+++ b/App1/MainWindow.xaml
@@ -1,16 +1,12 @@
-﻿<Window x:Class="App1.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:App1"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" Background="Red">
+﻿<Window
+    x:Class="App1.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:App1"
+    xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
+    xmlns:system="clr-namespace:System;assembly=mscorlib"  
+    WindowStartupLocation="CenterScreen">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="113*"/>
-            <ColumnDefinition Width="58*"/>
-            <ColumnDefinition Width="27*"/>
-        </Grid.ColumnDefinitions>
+        <syncfusion:SfScheduler x:Name="Schedule" FirstDayOfWeek="Tuesday"/>
     </Grid>
 </Window>
